# judgetuning

./: README.md  pyproject.toml  requirements.txt
judgetuning/: chatbot_arena_utils.py  experiment_tracker.py  judge_paths.py  utils.py
judgetuning/annotation_dataset/: __init__.py  annotation_dataset.py  judge_tuning_dataset.py  judge_wandb_annotations.py
judgetuning/annotation_dataset/tables/: __init__.py  table_annotation_dataset.py  tables_alpaca_eval.py  tables_arena_hard.py  tables_llmbar.py  tables_lmsys_kaggle.py  tables_pandalm.py
judgetuning/join/: __init__.py  compute_matching.py  model_mapping_alpaca-eval.csv  model_mapping_arena-hard.csv
judgetuning/jsonfix/: json_fix_prompt.txt  json_fixer.py
judgetuning/judge/: __init__.py  eval_judge.py  generate_judge_annotations.py  judge_custom.py  judge_json.py  judge_length.py  judge_lm.py  judge_mockup.py  judge_pandalm.py  judge_pandalm_skipper.py  pandalm.py
judgetuning/llm_client/: __init__.py  llm_specs.py  mockup_client.py  vllm_utils.py
judgetuning/script/: evaluate_human_agreement.py  evaluate_spearman_correlation.py  select_lmsys_instructions.py  utils.py
results_scripts/: figure1.py  figure12.py  figure13.py  figure2.py  figure6.py  figure7.py  table1.py  table2.py
tst/: test_annotation_dataset.py  test_cache.py  test_format_request.py  test_generate_prompt.py  test_jsonfixer.py  test_judge.py  test_judge_alpacaeval.py  test_judge_arena_hard.py  test_judge_options.py  test_mockupclient.py  test_ollama_completion_client.py  test_pipeline.py  test_regex.py
(+16 files in other folders)
