[project]
name = "judgetuningpublic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "huggingface-hub>=0.31.4",
    "jinja2>=3.1.6",
    "json-repair>=0.44.1",
    "matplotlib<3.10",
    "numpy>=2.2.6",
    "ollama>=0.4.8",
    "openai>=1.79.0",
    "pandas>=2.2.3",
    "pyparfor",
    "pytest>=8.3.5",
    "ray>=2.46.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tenacity>=9.1.2",
    "tiktoken>=0.9.0",
    "timeblock",
    "together>=1.5.8",
    "transformers>=4.51.3",
    "wandb>=0.19.11",
]

[tool.uv.sources]
timeblock = { git = "https://github.com/geoalgo/timeblock.git" }
pyparfor = { git = "https://github.com/geoalgo/pyparfor.git" }
